--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.12.13",
-    "@babel/preset-react": "^7.13.13",
-    "jest": "^27.0.3"
+    "@babel/preset-react": "^7.13.13"
   },
   "babel": {
     "presets": [
